Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanNumObj.quorum
Number num
num:SetValue(5.5)
boolean bool = cast(boolean, num)
output bool