Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjNumObj.quorum
Number num
num:setValue(7.5)
Integer i = num